[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrunner"
version = "0.8"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Exo Software", email = "mail@exo.pt"},
]
maintainers = [
  {name = "Exo Software", email = "mail@exo.pt"},
]
description = "A multiversion python runtime package for running obfuscated code"
keywords = ["exo", "ptplus", "pt+", "pt-plus", "localization"]
classifiers = [
  "Programming Language :: Python"
]
